# assertive_behaviour_public

./: CMakeLists.txt  CMakeLists.txt~  laser_example.txt  leg detection example.txt  mainpage.dox  manifest.xml  manifest.xml~  package.xml
include/assertive_behaviour/: assertive_behaviour.h  assertive_behaviour.h~
launch/: assertive_behaviour.launch  assertive_behaviour.launch~  assertive_behaviour_priss.launch  assertive_behaviour_roy.launch  main_assertive_behaviour.launch
src/: assertive_behaviour.cpp  assertive_behaviour.cpp~  main.cpp  main.cpp~
